[NO-JIRA] Fix section hrefs jumping on focus

--- a/src/Subsection/subsection.scss
+++ b/src/Subsection/subsection.scss
@@ -69,7 +69,7 @@
     text-decoration: none;
     opacity: 0.4;
 
-    @include focus-style;
+    @include focus-style($apply-relative-positioning: false);
 
     @include bpk-breakpoint-tablet {
       /* stylelint-disable-next-line unit-blacklist, unit-disallowed-list */
